major fixes and changes
